# lanchat2-server

./: .gitignore  README.md  meson.build
doc/: .$class-diagram.drawio.dtmp  CORE_AUTH.md  CORE_MSG.md  SYSTEMS.md  class-diagram.drawio
src/: Config.cpp  Config.cxx  Config.h  ConfigError.h  Connection.cpp  Connection.cxx  Connection.h  Parser.cpp  Parser.cxx  Parser.h  lanchat2_server.cxx
src/chat/: Chat.cxx  Chat.h  ChatHookComposite.cxx  ChatHookComposite.h  ChatHookTemplate.h  IChat.h  IChatHandler.h  IChatHook.h
src/chat/request/: ChatHandle.cxx  ChatHandle.h  IRequest.h  IRequestVisitor.h  Message.h  SubscribeRequest.h  UnsubscribeRequest.h  request_factory.cxx  request_factory.h
src/chat/request/visitors/: RequestRoutingVisitor.cxx  RequestRoutingVisitor.h
src/chat/systems/auth/: CoreAuthConfig.h  CoreAuthSystem.cxx  CoreAuthSystem.h  IAuthProvider.h
src/chat/systems/msg/: CoreMsgConfig.h  CoreMsgHook.cxx  CoreMsgHook.h
src/chat/systems/sanity/: CoreSanityConfig.h  CoreSanityHook.cxx  CoreSanityHook.h
src/loggers/: ConsoleLogger.cpp  ConsoleLogger.cxx  ConsoleLogger.h  ILogger.h
src/utils/: uuid.cxx  uuid.h
subprojects/: .gitignore
